SERVER-18485: Missing language aliases for experimental RLP languages

GitOrigin-RevId: 1be1163f0d2a1df8a75195345af56677eea69f2d